improved JLIcon._get to allow for dynamic lookup on multiple classNames

--- a/packages/ui-components/style/deprecated.css
+++ b/packages/ui-components/style/deprecated.css
@@ -12,17 +12,19 @@
 /* Icons urls */
 
 :root {
+  --jp-icon-caret-down-empty-thin: url('icons/arrow/caret-down-empty-thin.svg');
   --jp-icon-caret-down-empty: url('icons/arrow/caret-down-empty.svg');
   --jp-icon-caret-down: url('icons/arrow/caret-down.svg');
   --jp-icon-caret-left: url('icons/arrow/caret-left.svg');
   --jp-icon-caret-right: url('icons/arrow/caret-right.svg');
+  --jp-icon-caret-up-empty-thin: url('icons/arrow/caret-up-empty-thin.svg');
   --jp-icon-caret-up: url('icons/arrow/caret-up.svg');
-  --jp-icon-baseline-web-24px: url('icons/filetype/baseline-web-24px.svg');
   --jp-icon-console: url('icons/filetype/console.svg');
   --jp-icon-file: url('icons/filetype/file.svg');
   --jp-icon-folder: url('icons/filetype/folder.svg');
   --jp-icon-html5: url('icons/filetype/html5.svg');
   --jp-icon-image: url('icons/filetype/image.svg');
+  --jp-icon-inspector: url('icons/filetype/inspector.svg');
   --jp-icon-json: url('icons/filetype/json.svg');
   --jp-icon-keyboard: url('icons/filetype/keyboard.svg');
   --jp-icon-launcher: url('icons/filetype/launcher.svg');
@@ -39,10 +41,8 @@
   --jp-icon-jupyter-favicon: url('icons/jupyter/jupyter-favicon.svg');
   --jp-icon-jupyter: url('icons/jupyter/jupyter.svg');
   --jp-icon-jupyterlab-wordmark: url('icons/jupyter/jupyterlab-wordmark.svg');
-  --jp-icon-search_arrow_down: url('icons/search/search_arrow_down.svg');
-  --jp-icon-search_arrow_up: url('icons/search/search_arrow_up.svg');
-  --jp-icon-search_case_sensitive: url('icons/search/search_case_sensitive.svg');
-  --jp-icon-search_regex: url('icons/search/search_regex.svg');
+  --jp-icon-case-sensitive: url('icons/search/case-sensitive.svg');
+  --jp-icon-regex: url('icons/search/regex.svg');
   --jp-icon-build: url('icons/sidebar/build.svg');
   --jp-icon-extension: url('icons/sidebar/extension.svg');
   --jp-icon-palette: url('icons/sidebar/palette.svg');
@@ -57,6 +57,7 @@
   --jp-icon-add: url('icons/toolbar/add.svg');
   --jp-icon-bug: url('icons/toolbar/bug.svg');
   --jp-icon-check: url('icons/toolbar/check.svg');
+  --jp-icon-circle-empty: url('icons/toolbar/circle-empty.svg');
   --jp-icon-circle: url('icons/toolbar/circle.svg');
   --jp-icon-close-circle: url('icons/toolbar/close-circle.svg');
   --jp-icon-close: url('icons/toolbar/close.svg');
@@ -69,7 +70,6 @@
   --jp-icon-filter-list: url('icons/toolbar/filter-list.svg');
   --jp-icon-link: url('icons/toolbar/link.svg');
   --jp-icon-new-folder: url('icons/toolbar/new-folder.svg');
-  --jp-icon-panorama_fish_eye: url('icons/toolbar/panorama_fish_eye.svg');
   --jp-icon-paste: url('icons/toolbar/paste.svg');
   --jp-icon-refresh: url('icons/toolbar/refresh.svg');
   --jp-icon-run: url('icons/toolbar/run.svg');
@@ -81,6 +81,9 @@
 
 /* Icon CSS class declarations */
 
+.jp-CaretDownEmptyThinIcon {
+  background-image: var(--jp-icon-caret-down-empty-thin);
+}
 .jp-CaretDownEmptyIcon {
   background-image: var(--jp-icon-caret-down-empty);
 }
@@ -93,11 +96,11 @@
 .jp-CaretRightIcon {
   background-image: var(--jp-icon-caret-right);
 }
+.jp-CaretUpEmptyThinIcon {
+  background-image: var(--jp-icon-caret-up-empty-thin);
+}
 .jp-CaretUpIcon {
   background-image: var(--jp-icon-caret-up);
-}
-.jp-BaselineWeb24pxIcon {
-  background-image: var(--jp-icon-baseline-web-24px);
 }
 .jp-ConsoleIcon {
   background-image: var(--jp-icon-console);
@@ -113,6 +116,9 @@
 }
 .jp-ImageIcon {
   background-image: var(--jp-icon-image);
+}
+.jp-InspectorIcon {
+  background-image: var(--jp-icon-inspector);
 }
 .jp-JsonIcon {
   background-image: var(--jp-icon-json);
@@ -162,17 +168,11 @@
 .jp-JupyterlabWordmarkIcon {
   background-image: var(--jp-icon-jupyterlab-wordmark);
 }
-.jp-Search_arrow_downIcon {
-  background-image: var(--jp-icon-search_arrow_down);
+.jp-CaseSensitiveIcon {
+  background-image: var(--jp-icon-case-sensitive);
 }
-.jp-Search_arrow_upIcon {
-  background-image: var(--jp-icon-search_arrow_up);
-}
-.jp-Search_case_sensitiveIcon {
-  background-image: var(--jp-icon-search_case_sensitive);
-}
-.jp-Search_regexIcon {
-  background-image: var(--jp-icon-search_regex);
+.jp-RegexIcon {
+  background-image: var(--jp-icon-regex);
 }
 .jp-BuildIcon {
   background-image: var(--jp-icon-build);
@@ -216,6 +216,9 @@
 .jp-CheckIcon {
   background-image: var(--jp-icon-check);
 }
+.jp-CircleEmptyIcon {
+  background-image: var(--jp-icon-circle-empty);
+}
 .jp-CircleIcon {
   background-image: var(--jp-icon-circle);
 }
@@ -251,9 +254,6 @@
 }
 .jp-NewFolderIcon {
   background-image: var(--jp-icon-new-folder);
-}
-.jp-Panorama_fish_eyeIcon {
-  background-image: var(--jp-icon-panorama_fish_eye);
 }
 .jp-PasteIcon {
   background-image: var(--jp-icon-paste);
