--- a/packages/documentsearch/style/base.css
+++ b/packages/documentsearch/style/base.css
@@ -98,14 +98,6 @@
   width: 5px;
 }
 
-.jp-DocumentSearch-regex-button {
-  background-image: var(--jp-icon-search-regex);
-}
-
-.jp-DocumentSearch-case-button {
-  background-image: var(--jp-icon-search-case-sensitive);
-}
-
 .jp-DocumentSearch-input-button:before {
   display: block;
   padding-top: 100%;
@@ -153,7 +145,6 @@
 }
 
 .jp-DocumentSearch-up-button {
-  background-image: var(--jp-icon-search-arrow-up);
   border-radius: var(--jp-border-radius);
 }
 
@@ -166,7 +157,6 @@
 }
 
 .jp-DocumentSearch-down-button {
-  background-image: var(--jp-icon-search-arrow-down);
   border-radius: var(--jp-border-radius);
 }
 
@@ -275,7 +265,8 @@
 }
 
 .jp-DocumentSearch-replace-toggle-collapsed {
-  background-image: var(--jp-image-caretright);
+  background-image: var(--jp-icon-caret-right);
+  background-size: 18px;
   border-radius: var(--jp-border-radius);
 }
 
@@ -284,7 +275,8 @@
 }
 
 .jp-DocumentSearch-replace-toggle-expanded {
-  background-image: var(--jp-image-caretdown);
+  background-image: var(--jp-icon-caret-down);
+  background-size: 18px;
   border-radius: var(--jp-border-radius);
 }
 
