migrated running item icons to JLIcon

--- a/packages/application/style/icons.css
+++ b/packages/application/style/icons.css
@@ -258,7 +258,7 @@
   background-image: var(--jp-icon-close);
 }
 
-.jp-CodeConsoleIcon {
+.jp-ConsoleIcon {
   background-image: var(--jp-icon-console);
 }
 
