--- a/packages/theme-light-extension/style/urls.css
+++ b/packages/theme-light-extension/style/urls.css
@@ -11,28 +11,27 @@
   /*--jp-ui-select-caret: url('icons/md/down_caret.svg');*/
 
   /*--jp-icon-bug: url('icons/md/bug.svg');*/
-  /*--jp-icon-checkmark: url('icons/md/checkmark.svg');*/
   /*--jp-icon-circle: url('icons/md/circle.svg');*/
   /*--jp-icon-close-circle: url('icons/md/close-circle.svg');*/
   /*--jp-icon-close: url('icons/md/close.svg');*/
 
-  /*--jp-icon-checkmark-disabled: url('icons/md/checkmark-disabled.svg');*/
   /*--jp-icon-inverse-circle: url('icons/md/circle-inverse.svg');*/
   /*--jp-icon-inverse-close-circle: url('icons/md/close-circle-inverse.svg');*/
   /*--jp-icon-inverse-close: url('icons/md/close-inverse.svg');*/
-
-  /*--jp-icon-search-white: url('icons/md/search-white.svg');*/
-  /*--jp-icon-search: url('icons/md/search.svg');*/
 
   /* blocked by need for stack/carousel */
 
   /* blocked by lumino interaction*/
 
+  /*--jp-icon-check: url('icons/md/checkmark.svg');*/
+  /*--jp-icon-check-disabled: url('icons/md/checkmark-disabled.svg');*/
   /*--jp-icon-console: url('icons/jupyter/console.svg');*/
   /*--jp-icon-download: url('icons/md/download.svg');*/
   /*--jp-icon-filter-list: url('icons/md/ic_filter_list_24px.svg');*/
   /*--jp-icon-edit: url('icons/md/edit.svg');*/
   /*--jp-icon-link: url('icons/md/link.svg');*/
   /*--jp-icon-new-folder: url('icons/md/ic_create_new_folder_24px.svg');*/
+  /*--jp-icon-search: url('icons/md/search.svg');*/
+  /*--jp-icon-search-white: url('icons/md/search-white.svg');*/
   /*--jp-icon-undo: url('icons/md/undo.svg');*/
 }
