added CSS for inverting icon colors, and for changing them on hover

--- a/packages/application/style/icons.css
+++ b/packages/application/style/icons.css
@@ -73,6 +73,15 @@
   stroke: var(--jp-layout-color4);
 }
 
+/* set the color of an icon to transparent */
+.jp-icon-none[fill] {
+  fill: none;
+}
+
+.jp-icon-none[stroke] {
+  stroke: none;
+}
+
 /* brand icon colors. Same for light and dark */
 .jp-icon-brand0[fill] {
   fill: var(--jp-brand-color0);
