--- a/packages/application/style/base.css
+++ b/packages/application/style/base.css
@@ -47,6 +47,8 @@ body {
 @import './datagrid.css';
 @import './dockpanel.css';
 @import './icons.css';
+@import './iconshover.css';
+@import './iconsinverse.css';
 @import './menus.css';
 @import './scrollbar.css';
 @import './tabs.css';
