set up all in one busy/close/close-circle icon

--- a/packages/application/style/base.css
+++ b/packages/application/style/base.css
@@ -48,7 +48,7 @@ body {
 @import './dockpanel.css';
 @import './icons.css';
 @import './iconshover.css';
-@import './iconsinverse.css';
+@import './iconsalt.css';
 @import './menus.css';
 @import './scrollbar.css';
 @import './tabs.css';
