--- a/packages/application/style/icons.css
+++ b/packages/application/style/icons.css
@@ -39,7 +39,6 @@
 .jp-icon4[stroke] {
   stroke: var(--jp-inverse-layout-color4);
 }
-
 /* recolor the accent elements of an icon */
 .jp-icon-accent0[fill] {
   fill: var(--jp-layout-color0);
@@ -72,7 +71,6 @@
 .jp-icon-accent4[stroke] {
   stroke: var(--jp-layout-color4);
 }
-
 /* set the color of an icon to transparent */
 .jp-icon-none[fill] {
   fill: none;
@@ -81,7 +79,6 @@
 .jp-icon-none[stroke] {
   stroke: none;
 }
-
 /* brand icon colors. Same for light and dark */
 .jp-icon-brand0[fill] {
   fill: var(--jp-brand-color0);
@@ -114,7 +111,6 @@
 .jp-icon-brand4[stroke] {
   stroke: var(--jp-brand-color4);
 }
-
 /* warn icon colors. Same for light and dark */
 .jp-icon-warn0[fill] {
   fill: var(--jp-warn-color0);
@@ -141,7 +137,6 @@
 .jp-icon-warn3[stroke] {
   stroke: var(--jp-warn-color3);
 }
-
 /* icon colors that contrast well with each other and most backgrounds */
 .jp-icon-contrast0[fill] {
   fill: var(--jp-icon-contrast-color0);
@@ -171,9 +166,8 @@
 
 /* CSS for icons in selected items in the settings editor */
 #setting-editor .jp-PluginList .jp-mod-selected .jp-icon-selectable[fill] {
-  fill: white;
+  fill: #fff;
 }
-
 #setting-editor
   .jp-PluginList
   .jp-mod-selected
@@ -183,31 +177,92 @@
 
 /* CSS for icons in selected filebrowser listing items */
 .jp-DirListing-item.jp-mod-selected .jp-icon-selectable[fill] {
-  fill: white;
+  fill: #fff;
 }
-
 .jp-DirListing-item.jp-mod-selected .jp-icon-selectable-inverse[fill] {
   fill: var(--jp-brand-color1);
 }
 
 /* CSS for icons in selected tabs in the sidebar tab manager */
 #tab-manager .p-TabBar-tab.jp-mod-active .jp-icon-selectable[fill] {
-  fill: white;
+  fill: #fff;
 }
 
 #tab-manager .p-TabBar-tab.jp-mod-active .jp-icon-selectable-inverse[fill] {
   fill: var(--jp-brand-color1);
 }
+#tab-manager
+  .p-TabBar-tab.jp-mod-active
+  .jp-icon-hover
+  :hover
+  .jp-icon-selectable[fill] {
+  fill: var(--jp-brand-color1);
+}
+
+#tab-manager
+  .p-TabBar-tab.jp-mod-active
+  .jp-icon-hover
+  :hover
+  .jp-icon-selectable-inverse[fill] {
+  fill: #fff;
+}
+
+/**
+ * TODO: come up with non css-hack solution for showing the busy icon on top
+ *  of the close icon
+ * CSS for complex behavior of close icon of tabs in the sidebar tab manager
+ */
+#tab-manager
+  .p-TabBar-tab.jp-mod-dirty
+  > .p-TabBar-tabCloseIcon
+  > :not(:hover)
+  > .jp-icon3[fill] {
+  fill: none;
+}
+#tab-manager
+  .p-TabBar-tab.jp-mod-dirty
+  > .p-TabBar-tabCloseIcon
+  > :not(:hover)
+  > .jp-icon-busy[fill] {
+  fill: var(--jp-inverse-layout-color3);
+}
+
+#tab-manager
+  .p-TabBar-tab.jp-mod-dirty.jp-mod-active
+  > .p-TabBar-tabCloseIcon
+  > :not(:hover)
+  > .jp-icon-busy[fill] {
+  fill: #fff;
+}
+
+/**
+* TODO: come up with non css-hack solution for showing the busy icon on top
+*  of the close icon
+* CSS for complex behavior of close icon of tabs in the main area tabbar
+*/
+.p-DockPanel-tabBar
+  .p-TabBar-tab.p-mod-closable.jp-mod-dirty
+  > .p-TabBar-tabCloseIcon
+  > :not(:hover)
+  > .jp-icon3[fill] {
+  fill: none;
+}
+.p-DockPanel-tabBar
+  .p-TabBar-tab.p-mod-closable.jp-mod-dirty
+  > .p-TabBar-tabCloseIcon
+  > :not(:hover)
+  > .jp-icon-busy[fill] {
+  fill: var(--jp-inverse-layout-color3);
+}
 
 /* CSS for icons in status bar */
 #jp-main-statusbar .jp-mod-selected .jp-icon-selectable[fill] {
-  fill: white;
+  fill: #fff;
 }
 
 #jp-main-statusbar .jp-mod-selected .jp-icon-selectable-inverse[fill] {
   fill: var(--jp-brand-color1);
 }
-
 /* special handling for splash icon CSS. While the theme CSS reloads during
    splash, the splash icon can loose theming. To prevent that, we set a
    default for its color variable */
@@ -218,7 +273,6 @@
 /**
  * (DEPRECATED) Support for icons as CSS `background-images`
  */
-
 .jp-MaterialIcon {
   min-width: 16px;
   min-height: 16px;
@@ -228,7 +282,6 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-
 .jp-Icon {
   display: inline-block;
   vertical-align: middle;
@@ -269,10 +322,6 @@
 
 .jp-ConsoleIcon {
   background-image: var(--jp-icon-console);
-}
-
-.jp-DirectionsRunIcon {
-  background-image: var(--jp-icon-directions-run);
 }
 
 .jp-DownloadIcon {
