--- a/packages/application/style/iconsalt.css
+++ b/packages/application/style/iconsalt.css
@@ -4,71 +4,71 @@
 |----------------------------------------------------------------------------*/
 
 /**
- * Support for inverse colors for icons as inline SVG HTMLElements
+ * Support for alt colors for icons as inline SVG HTMLElements
  */
 
-/* inverse recolor the primary elements of an icon */
-.jp-icon-inverse .jp-icon0[fill] {
+/* alt recolor the primary elements of an icon */
+.jp-icon-alt .jp-icon0[fill] {
   fill: var(--jp-layout-color0);
 }
-.jp-icon-inverse .jp-icon1[fill] {
+.jp-icon-alt .jp-icon1[fill] {
   fill: var(--jp-layout-color1);
 }
-.jp-icon-inverse .jp-icon2[fill] {
+.jp-icon-alt .jp-icon2[fill] {
   fill: var(--jp-layout-color2);
 }
-.jp-icon-inverse .jp-icon3[fill] {
+.jp-icon-alt .jp-icon3[fill] {
   fill: var(--jp-layout-color3);
 }
-.jp-icon-inverse .jp-icon4[fill] {
+.jp-icon-alt .jp-icon4[fill] {
   fill: var(--jp-layout-color4);
 }
 
-.jp-icon-inverse .jp-icon0[stroke] {
+.jp-icon-alt .jp-icon0[stroke] {
   stroke: var(--jp-layout-color0);
 }
-.jp-icon-inverse .jp-icon1[stroke] {
+.jp-icon-alt .jp-icon1[stroke] {
   stroke: var(--jp-layout-color1);
 }
-.jp-icon-inverse .jp-icon2[stroke] {
+.jp-icon-alt .jp-icon2[stroke] {
   stroke: var(--jp-layout-color2);
 }
-.jp-icon-inverse .jp-icon3[stroke] {
+.jp-icon-alt .jp-icon3[stroke] {
   stroke: var(--jp-layout-color3);
 }
-.jp-icon-inverse .jp-icon4[stroke] {
+.jp-icon-alt .jp-icon4[stroke] {
   stroke: var(--jp-layout-color4);
 }
 
-/* inverse recolor the accent elements of an icon */
-.jp-icon-inverse .jp-icon-accent0[fill] {
+/* alt recolor the accent elements of an icon */
+.jp-icon-alt .jp-icon-accent0[fill] {
   fill: var(--jp-inverse-layout-color0);
 }
-.jp-icon-inverse .jp-icon-accent1[fill] {
+.jp-icon-alt .jp-icon-accent1[fill] {
   fill: var(--jp-inverse-layout-color1);
 }
-.jp-icon-inverse .jp-icon-accent2[fill] {
+.jp-icon-alt .jp-icon-accent2[fill] {
   fill: var(--jp-inverse-layout-color2);
 }
-.jp-icon-inverse .jp-icon-accent3[fill] {
+.jp-icon-alt .jp-icon-accent3[fill] {
   fill: var(--jp-inverse-layout-color3);
 }
-.jp-icon-inverse .jp-icon-accent4[fill] {
+.jp-icon-alt .jp-icon-accent4[fill] {
   fill: var(--jp-inverse-layout-color4);
 }
 
-.jp-icon-inverse .jp-icon-accent0[stroke] {
+.jp-icon-alt .jp-icon-accent0[stroke] {
   stroke: var(--jp-inverse-layout-color0);
 }
-.jp-icon-inverse .jp-icon-accent1[stroke] {
+.jp-icon-alt .jp-icon-accent1[stroke] {
   stroke: var(--jp-inverse-layout-color1);
 }
-.jp-icon-inverse .jp-icon-accent2[stroke] {
+.jp-icon-alt .jp-icon-accent2[stroke] {
   stroke: var(--jp-inverse-layout-color2);
 }
-.jp-icon-inverse .jp-icon-accent3[stroke] {
+.jp-icon-alt .jp-icon-accent3[stroke] {
   stroke: var(--jp-inverse-layout-color3);
 }
-.jp-icon-inverse .jp-icon-accent4[stroke] {
+.jp-icon-alt .jp-icon-accent4[stroke] {
   stroke: var(--jp-inverse-layout-color4);
 }
