--- a/packages/application/style/iconshover.css
+++ b/packages/application/style/iconshover.css
@@ -91,67 +91,67 @@
  */
 
 /* inverse recolor the primary elements of an icon */
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon0-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon0-hover[fill] {
   fill: var(--jp-layout-color0);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon1-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon1-hover[fill] {
   fill: var(--jp-layout-color1);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon2-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon2-hover[fill] {
   fill: var(--jp-layout-color2);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon3-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon3-hover[fill] {
   fill: var(--jp-layout-color3);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon4-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon4-hover[fill] {
   fill: var(--jp-layout-color4);
 }
 
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon0-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon0-hover[stroke] {
   stroke: var(--jp-layout-color0);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon1-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon1-hover[stroke] {
   stroke: var(--jp-layout-color1);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon2-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon2-hover[stroke] {
   stroke: var(--jp-layout-color2);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon3-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon3-hover[stroke] {
   stroke: var(--jp-layout-color3);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon4-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon4-hover[stroke] {
   stroke: var(--jp-layout-color4);
 }
 
 /* inverse recolor the accent elements of an icon */
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent0-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent0-hover[fill] {
   fill: var(--jp-inverse-layout-color0);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent1-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent1-hover[fill] {
   fill: var(--jp-inverse-layout-color1);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent2-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent2-hover[fill] {
   fill: var(--jp-inverse-layout-color2);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent3-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent3-hover[fill] {
   fill: var(--jp-inverse-layout-color3);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent4-hover[fill] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent4-hover[fill] {
   fill: var(--jp-inverse-layout-color4);
 }
 
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent0-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent0-hover[stroke] {
   stroke: var(--jp-inverse-layout-color0);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent1-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent1-hover[stroke] {
   stroke: var(--jp-inverse-layout-color1);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent2-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent2-hover[stroke] {
   stroke: var(--jp-inverse-layout-color2);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent3-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent3-hover[stroke] {
   stroke: var(--jp-inverse-layout-color3);
 }
-.jp-icon-hover.jp-icon-inverse :hover .jp-icon-accent4-hover[stroke] {
+.jp-icon-hover.jp-icon-alt :hover .jp-icon-accent4-hover[stroke] {
   stroke: var(--jp-inverse-layout-color4);
 }
