removed final vestiges of deprecated IconRegistry from codebase

--- a/packages/theme-light-extension/style/urls.css
+++ b/packages/theme-light-extension/style/urls.css
@@ -13,6 +13,10 @@
 
   /* blocked by need for stack/carousel */
 
+  /*--jp-icon-check: url('icons/md/checkmark.svg');*/
+  /*--jp-icon-check-disabled: url('icons/md/checkmark-disabled.svg');*/
+  /*--jp-icon-close: url('icons/md/close.svg');*/
+
   /* blocked by lumino interaction*/
 
   /*--jp-icon-check: url('icons/md/checkmark.svg');*/
