consolidated icon css in ui-components package

--- a/packages/theme-light-extension/style/urls.css
+++ b/packages/theme-light-extension/style/urls.css
@@ -5,6 +5,8 @@
 
 /* TODO: finish cleaning up these cases of icon-as-css-background-image */
 :root {
+  /* may be unused */
+
   /*--jp-icon-bug: url('icons/md/bug.svg');*/
 
   /* blocked by need for stack/carousel */
