--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -31,9 +31,15 @@
 }
 
 .jp-DebuggerBreakpoint-source {
-  flex-grow: 1;
   overflow: hidden;
+  direction: rtl;
+  white-space: nowrap;
   text-overflow: ellipsis;
+  margin-right: 5px;
+}
+
+.jp-DebuggerBreakpoint-line {
+  margin-left: auto;
 }
 
 [data-jp-debugger='true'] .CodeMirror-gutter-wrapper::after {
